JumpScript/tests/baselines/reference/parse1.errors.txt
tests/cases/compiler/parse1.jump(4,1): error TS1003: Identifier expected.


==== tests/cases/compiler/parse1.jump (1 errors) ====
    var bar = 42;
    function foo() {
     bar.
    }
    ~
!!! error TS1003: Identifier expected.
    